--- a/LiveTest/LiveTest.Client/Pages/FabButtons.razor
+++ b/LiveTest/LiveTest.Client/Pages/FabButtons.razor
@@ -4,63 +4,69 @@
 
 @rendermode InteractiveAuto
 <select @bind="Size">
-    @foreach (var appearance in Enum.GetValues<Size>().Distinct()) {
-        <option value="@appearance">@appearance</option>
-    }
+	@foreach (var appearance in Enum.GetValues<Size>().Distinct()) {
+		<option value="@appearance">@appearance</option>
+	}
 </select>
 <label>
-    <input type="checkbox" @bind="ShowText" />
-    ShowText
+	<input type="checkbox" @bind="ShowText" />
+	ShowText
 </label>
 <label>
-    <input type="checkbox" @bind="Disabled" />
-    Disabled
-</label>
-
-<label>
-    <input type="checkbox" @bind="StartIcon" />
-    Start Icon
+	<input type="checkbox" @bind="Disabled" />
+	Disabled
 </label>
 
 <label>
-    <input type="checkbox" @bind="EndIcon" />
-    End Icon
+	<input type="checkbox" @bind="StartIcon" />
+	Start Icon
+</label>
+
+<label>
+	<input type="checkbox" @bind="EndIcon" />
+	End Icon
 </label>
 
 
 <TnTDivider style="margin-top:36px;margin-bottom:36px;" />
 <TnTRow>
-    <TnTColumn S="12">
-        <TnTFabButton ButtonSize="@Size" Disabled="Disabled">
-            @if (StartIcon) {
-                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
-            }
-            @if (ShowText) {
-                <text>Button Text</text>
-            }
-            @if (EndIcon) {
-                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
-            }
-            <TnTBadge>
-                100
-            </TnTBadge>
-            <TnTProgressIndicator ProgressColor="TnTColor.Error" />
-        </TnTFabButton>
-    </TnTColumn>
+	<TnTColumn S="12">
+		<TnTFabButton ButtonSize="@Size" Disabled="Disabled">
+			<ChildContent>
+				@if (StartIcon) {
+					<MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+				}
+				@if (ShowText) {
+					<text>Button Text</text>
+				}
+				@if (EndIcon) {
+					<MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+				}
+				<TnTBadge>
+					100
+				</TnTBadge>
+				<TnTProgressIndicator ProgressColor="TnTColor.Error" />
+			</ChildContent>
+
+			<Tooltip>
+				My tooltip content
+			</Tooltip>
+		</TnTFabButton>
+	</TnTColumn>
 </TnTRow>
 
 
 @code {
-    private Size Size { get; set; } = Size.Small;
+	private Size Size { get; set; } = Size.Small;
 
 
-    private bool Disabled { get; set; }
+	private bool Disabled { get; set; }
 
-    private bool StartIcon { get; set; }
+	private bool StartIcon { get; set; }
 
-    private bool EndIcon { get; set; }
+	private bool EndIcon { get; set; }
 
-    private bool ShowText { get; set; } = true;
+	private bool ShowText { get; set; } = true;
 }
 
 
