--- a/TnTComponents/Form/TnTInputFile.razor
+++ b/TnTComponents/Form/TnTInputFile.razor
@@ -23,6 +23,9 @@
         </span>
     }
 
+    @if (Tooltip is not null) {
+        @TooltipIcon.Render()
+    }
     @if (EndIcon is not null) {
         @EndIcon.Render("tnt-end-icon")
     }
