--- a/TnTComponents/Form/TnTInputRadioGroup.razor
+++ b/TnTComponents/Form/TnTInputRadioGroup.razor
@@ -29,6 +29,10 @@
         </legend>
     }
 
+    @if (Tooltip is not null) {
+        @TooltipIcon.Render()
+    }
+
     @if (EndIcon is not null) {
         @EndIcon.Render("tnt-end-icon")
     }
