--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -4,32 +4,36 @@
 @inherits TnTComponentBase
 
 <button @attributes="AdditionalAttributes"
-        class="@($"tnt-image-button {ElementClass}")"
-        style="@ElementStyle"
-        type="@Type.ToHtmlAttribute()"
-        name="@ElementName"
-        disabled="@Disabled"
-        autofocus="@AutoFocus"
-        title="@ElementTitle"
-        id="@ElementId"
-        @onclick="OnClickCallback"
-        @onclick:stopPropagation="StopPropagation"
-        @ref="Element">
-
-@if (ButtonSize == Size.Small || ButtonSize == Size.XS) {
-    <div class="@($"tnt-small-button-layer {ElementClass}")">
-        @Badge?.Render()
-        @Icon.Render()
-        @if (EnableRipple) {
-            <TnTRippleEffect />
-        }
-    </div>
-}
-else {
-    @Badge?.Render()
-    @Icon.Render()
-    @if (EnableRipple) {
-        <TnTRippleEffect />
-    }
-}
+		class="@($"tnt-image-button {ElementClass}")"
+		style="@ElementStyle"
+		type="@Type.ToHtmlAttribute()"
+		name="@ElementName"
+		disabled="@Disabled"
+		autofocus="@AutoFocus"
+		title="@ElementTitle"
+		id="@ElementId"
+		@onclick="OnClickCallback"
+		@onclick:stopPropagation="StopPropagation"
+		@ref="Element">
+	@if (Tooltip is not null) {
+		<TnTTooltip>
+			@Tooltip
+		</TnTTooltip>
+	}
+	@if (ButtonSize == Size.Small || ButtonSize == Size.XS) {
+		<div class="@($"tnt-small-button-layer {ElementClass}")">
+			@Badge?.Render()
+			@Icon.Render()
+			@if (EnableRipple) {
+				<TnTRippleEffect />
+			}
+		</div>
+	}
+	else {
+		@Badge?.Render()
+		@Icon.Render()
+		@if (EnableRipple) {
+			<TnTRippleEffect />
+		}
+	}
 </button>
