--- a/TnTComponents/Form/TnTInputSwitch.razor.scss
+++ b/TnTComponents/Form/TnTInputSwitch.razor.scss
@@ -89,6 +89,12 @@
         .tnt-validation-message {
             color: base.$error-color;
         }
+
+        .tnt-tooltip-icon {
+            position: absolute;
+            right: -28px;
+            top: 0;
+        }
     }
 
 
