--- a/TnTComponents/Grid/Columns/TnTColumnBase.razor
+++ b/TnTComponents/Grid/Columns/TnTColumnBase.razor
@@ -7,38 +7,44 @@
 @implements IDisposable
 
 @code {
-    public virtual void RenderHeaderContent(RenderTreeBuilder __builder) {
-        if (HeaderCellItemTemplate is not null) {
-            @HeaderCellItemTemplate(this)
-        }
-        else {
-            <div class="@_headerClass" @onclick="@(Sortable? SortAsync : null!)">
-                <span class="tnt-column-header-title">
-                    @Title
-                </span>
+	public virtual void RenderHeaderContent(RenderTreeBuilder __builder) {
+		if (HeaderToolip is not null) {
+			<TnTTooltip>
+				@HeaderToolip
+			</TnTTooltip>
+		}
 
-                @if (Sortable) {
-                    var sortedOn = IsSortedOn;
-                    @if (sortedOn.HasValue) {
-                        <span class="tnt-column-header-sort-icon">
-                            @if (sortedOn == SortDirection.Ascending) {
-                                <MaterialIcon Icon="@MaterialIcon.ArrowDropUp" />
-                            }
-                            else if (sortedOn == SortDirection.Descending) {
-                                <MaterialIcon Icon="@MaterialIcon.ArrowDropDown" />
-                            }
-                            @if (Context.Grid.AllowMultiSort) {
-                                <span class="tnt-column-header-sort-index">
-                                    @_sortIndex
-                                </span>
-                            }
-                        </span>
-                    }
-                    @if (EnableRipple) {
-                        <TnTRippleEffect />
-                    }
-                }
-            </div>
-        }
-    }
+		if (HeaderCellItemTemplate is not null) {
+			@HeaderCellItemTemplate(this)
+		}
+		else {
+			<div class="@_headerClass" @onclick="@(Sortable? SortAsync : null!)">
+				<span class="tnt-column-header-title">
+					@Title
+				</span>
+
+				@if (Sortable) {
+					var sortedOn = IsSortedOn;
+					@if (sortedOn.HasValue) {
+						<span class="tnt-column-header-sort-icon">
+							@if (sortedOn == SortDirection.Ascending) {
+								<MaterialIcon Icon="@MaterialIcon.ArrowDropUp" />
+							}
+							else if (sortedOn == SortDirection.Descending) {
+								<MaterialIcon Icon="@MaterialIcon.ArrowDropDown" />
+							}
+							@if (Context.Grid.AllowMultiSort) {
+								<span class="tnt-column-header-sort-index">
+									@_sortIndex
+								</span>
+							}
+						</span>
+					}
+					@if (EnableRipple) {
+						<TnTRippleEffect />
+					}
+				}
+			</div>
+		}
+	}
 }
