--- a/TnTComponents/TabView/TnTTabView.razor
+++ b/TnTComponents/TabView/TnTTabView.razor
@@ -4,33 +4,39 @@
 @namespace TnTComponents
 
 <tnt-tab-view @attributes=AdditionalAttributes class="@ElementClass" style="@ElementStyle" @ref="Element" data-permanent>
-    <CascadingValue Value="this" IsFixed="true">
-        <DeferRendering>
-            <div class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-header").AddFilled().AddForegroundColor(HeaderTextColor).AddBackgroundColor(HeaderBackgroundColor).Build())">
-                <span class="tnt-tab-view-header-buttons">
+	<CascadingValue Value="this" IsFixed="true">
+		<DeferRendering>
+			<div class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-header").AddFilled().AddForegroundColor(HeaderTextColor).AddBackgroundColor(HeaderBackgroundColor).Build())">
+				<span class="tnt-tab-view-header-buttons">
 
-                    @foreach (var pair in _tabChildren.Select((child, index) => new { child, index })) {
-                        var child = pair.child;
-                        var index = pair.index;
-                        <button type="button"
-                                title="@child.ElementTitle"
-                                class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-button").AddClass("tnt-interactable").AddRipple().AddDisabled(child.Disabled).Build())"
-                                style="@(CssStyleBuilder.Create().AddVariable("tnt-tab-header-background-color", HeaderBackgroundColor).AddVariable("tnt-tab-header-text-color", HeaderTextColor).AddVariable("tnt-tab-header-tint-color", HeaderTintColor).Build())"
-                                disabled="@(child.Disabled ? true : null)"
-                                @key="index">
-                            @if (Appearance == TabViewAppearance.Primary) {
-                                @child.Icon?.Render()
-                            }
-                            @child.Label
+					@foreach (var pair in _tabChildren.Select((child, index) => new { child, index })) {
+						var child = pair.child;
+						var index = pair.index;
+						<button type="button"
+								title="@child.ElementTitle"
+								class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-button").AddClass("tnt-interactable").AddRipple().AddDisabled(child.Disabled).Build())"
+								style="@(CssStyleBuilder.Create().AddVariable("tnt-tab-header-background-color", HeaderBackgroundColor).AddVariable("tnt-tab-header-text-color", HeaderTextColor).AddVariable("tnt-tab-header-tint-color", HeaderTintColor).Build())"
+								disabled="@(child.Disabled ? true : null)"
+								@key="index">
+							@if (Appearance == TabViewAppearance.Primary) {
+								@child.Icon?.Render()
+							}
+							@child.Label
 
-                            <TnTRippleEffect />
-                        </button>
-                    }
-                </span>
-                <span class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-active-indicator").Build())" style="@CssStyleBuilder.Create().AddBackgroundColor(ActiveIndicatorColor).Build()"></span>
-            </div>
-        </DeferRendering>
-        @ChildContent
-    </CascadingValue>
+							<TnTRippleEffect />
+
+							@if (child.HeaderTooltip is not null) {
+								<TnTTooltip BackgroundColor="@HeaderBackgroundColor" TextColor="@HeaderTextColor">
+									@child.HeaderTooltip
+								</TnTTooltip>
+							}
+						</button>
+					}
+				</span>
+				<span class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-active-indicator").Build())" style="@CssStyleBuilder.Create().AddBackgroundColor(ActiveIndicatorColor).Build()"></span>
+			</div>
+		</DeferRendering>
+		@ChildContent
+	</CascadingValue>
 </tnt-tab-view>
 @PageScript
