fix(typeahead): prevent form submit on Enter in typeahead
Pressing Enter to select a suggestion in TnTTypeahead now prevents default form submission if an item is focused. This is achieved by conditionally setting @onkeydown:preventDefault on the typeahead box wrapper. The TnTInputText @onkeydown handler is updated to set this flag before handling selection logic.

Added tests to verify that Enter does not submit a parent form when selecting a suggestion, including a wrapper component to test the typeahead inside a form context. This improves usability and prevents accidental form submissions when using the typeahead in forms.

--- a/TnTComponents/Typeahead/TnTTypeahead.razor
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Rendering
+@using Microsoft.AspNetCore.Components.Rendering
 @using TnTComponents
 @using TnTComponents.Core
 @using TnTComponents.Interfaces
@@ -16,7 +16,7 @@
      name="@ElementName"
      @ref="@Element">
 
-    <span class="tnt-typeahead-box">
+    <span class="tnt-typeahead-box" @onkeydown:preventDefault="_shouldPreventDefault">
         <TnTInputText @bind-Value="Value"
                       Appearance="@Appearance"
                       Label="@Label"
@@ -26,7 +26,7 @@
                       Disabled="@Disabled"
                       BackgroundColor="BackgroundColor"
                       StartIcon="@MaterialIcon.Search"
-                      @onkeydown="SelectOrShiftFocusAsync"
+                      @onkeydown="OnKeyDownInternalAsync"
                       @ref="_inputBox" />
         <TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
     </span>
