--- a/TnTComponents/Typeahead/TnTTypeahead.razor
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor
@@ -8,51 +8,56 @@
 @implements IDisposable
 
 <div @attributes="AdditionalAttributes"
-     class="@ElementClass"
-     style="@ElementStyle"
-     title="@ElementTitle"
-     lang="@ElementLang"
-     id="@ElementId"
-     name="@ElementName"
-     @ref="@Element">
+	 class="@ElementClass"
+	 style="@ElementStyle"
+	 title="@ElementTitle"
+	 lang="@ElementLang"
+	 id="@ElementId"
+	 name="@ElementName"
+	 @ref="@Element">
 
-    <span class="tnt-typeahead-box" @onkeydown:preventDefault="_shouldPreventDefault">
-        <TnTInputText @bind-Value="Value"
-                      Appearance="@Appearance"
-                      Label="@Label"
-                      Placeholder="@Placeholder"
-                      BindOnInput="true"
-                      BindAfter="SearchAsync"
-                      Disabled="@Disabled"
-                      BackgroundColor="BackgroundColor"
-                      StartIcon="@MaterialIcon.Search"
-                      @onkeydown="OnKeyDownInternalAsync"
-                      @ref="_inputBox" />
-        <TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
-    </span>
-    @if (_items.Any() || (!_items.Any() && !string.IsNullOrWhiteSpace(Value) && !_searching && !_itemSelected)) {
-        <div class="tnt-typeahead-content">
-            @if (_items.Any()) {
-                <ul class="tnt-typeahead-list">
-                    @foreach (var item in _items) {
-                        <li class="@($"tnt-typeahead-list-item{(item!.Equals(_focusedItem) ? " tnt-focused" : string.Empty)}")" tabindex="-1" @onclick="(() => ItemSelectedAsync(item))">
-                            @if (ResultTemplate is not null) {
-                                @ResultTemplate(item)
-                            }
-                            else {
-                                <span class="tnt-corner-radius-5 tnt-body-medium">
-                                    @item
-                                </span>
-                            }
-                        </li>
-                    }
-                </ul>
-            }
-            else if (!_items.Any() && !string.IsNullOrWhiteSpace(Value) && !_searching && !_itemSelected) {
-                <div class="tnt-typeahead-no-results">
-                    No results found
-                </div>
-            }
-        </div>
-    }
+	<span class="tnt-typeahead-box">
+		<TnTInputText @bind-Value="Value"
+					  Appearance="@Appearance"
+					  Label="@Label"
+					  Placeholder="@Placeholder"
+					  BindOnInput="true"
+					  BindAfter="SearchAsync"
+					  Disabled="@Disabled"
+					  BackgroundColor="BackgroundColor"
+					  StartIcon="@MaterialIcon.Search"
+					  @onkeydown="SelectOrShiftFocusAsync"
+					  @onfocus="@OnFocusAsync"
+					  OnBlurCallback="@OnBlurAsync"
+					  @ref="_inputBox" />
+		<TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
+	</span>
+	@if (_focused) {
+		<button type="submit" disabled />
+	}
+	@if (_items.Any() || (!_items.Any() && !string.IsNullOrWhiteSpace(Value) && !_searching && !_itemSelected)) {
+		<div class="tnt-typeahead-content">
+			@if (_items.Any()) {
+				<ul class="tnt-typeahead-list">
+					@foreach (var item in _items) {
+						<li class="@($"tnt-typeahead-list-item{(item!.Equals(_focusedItem) ? " tnt-focused" : string.Empty)}")" tabindex="-1" @onclick="(() => ItemSelectedAsync(item))">
+							@if (ResultTemplate is not null) {
+								@ResultTemplate(item)
+							}
+							else {
+								<span class="tnt-corner-radius-5 tnt-body-medium">
+									@item
+								</span>
+							}
+						</li>
+					}
+				</ul>
+			}
+			else if (!_items.Any() && !string.IsNullOrWhiteSpace(Value) && !_searching && !_itemSelected) {
+				<div class="tnt-typeahead-no-results">
+					No results found
+				</div>
+			}
+		</div>
+	}
 </div>
